--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mujoco-py = "^2.1.2.14"
 d4rl = "^1.1"
 mjrl = { git = "https://github.com/aravindr93/mjrl.git"}
 minigrid = "<3.0.0"
+pandas = "^2.0.1"
 
 [tool.poetry.group.tests]
 optional = true
