--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ d4rl = "^1.1"
 mjrl = { git = "https://github.com/aravindr93/mjrl.git"}
 minigrid = "<3.0.0"
 pandas = "^2.0.1"
+gymnasium-robotics = "^1.2.0"
 
 [tool.poetry.group.tests]
 optional = true
@@ -41,5 +42,5 @@ check-manifest = "^0.49"
 twine = "1.13.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core", "swig"]
 build-backend = "poetry.core.masonry.api"
